--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,5 +32,9 @@ dependencies {
     implementation 'com.lorentzos.swipecards:library:1.0.9'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.google.android.material:material:1.1.0'
+    implementation ('com.github.chtgupta:FadeInTextView-Android:2.1.0') {
+        exclude module: 'app'
+    }
+
 
 }
