--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".HomeActivity"></activity>
         <activity android:name=".NavigationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -23,9 +25,7 @@
         <activity android:name=".SettingUsersActivity" />
         <activity android:name=".DangNhapActivity" />
         <activity android:name=".DangKyActivity" />
-        <activity android:name=".ChooseLoginRegistationActivity">
-
-        </activity>
+        <activity android:name=".ChooseLoginRegistationActivity"></activity>
         <activity android:name=".MainActivity" />
     </application>
 
